prototypes/p2a/tests/invalid/07_non_exhaustive_result.hll
// MUST BE REJECTED: match on Result only handles Ok, not Err (non-exhaustive)

type Email = String where validate.email()
struct InvalidEmail { String input }

function parseEmail(String input) -> Result<Email, InvalidEmail> {
    Ok(Email(input))
}

function main() {
    let result = parseEmail("test@x.com")
    match result {
        Ok(email) => printLn(email)
        // ERROR: missing Err case — non-exhaustive match on Result
    }
}
